feat: added a new "merge_tags_shaped" config setting
Used for shaped digging modes, while the original "merge_tags" is now only used
for shapeless digging mode.

https://github.com/FTBTeam/FTB-Mods-Issues/issues/444